# pyDNAbwt

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
src/c/: CMakeLists.txt
src/c/bwt/: bwt.h  bwt_internal.h  bwt_inverse.c  bwt_search.c  bwt_transform.c
src/c/code/: dna_rle.c  dna_rle.h  sentinel.c  sentinel.h
src/c/io/: file_reader.c  file_writer.c  io.h
src/c/util/: alloc.c  log.c  progress.c  signal.c  status.c  status.h  util.h
src/dnabwt/: __init__.py  api.py  exceptions.py  logging.py  progress.py
src/dnabwt/_core/: binding.c  binding.h  core_api.c  core_api.h
tests/: conftest.py  test_api_modes.py  test_exception_mapping.py  test_interrupt_callbacks.py  test_parameter_validation.py
