[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDNAbwt"
version = "0.1.0"
description = "DNA BWT transform/search with C core"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["tqdm>=4.65"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dnabwt*"]
